# python_foundations

./: .flake8  .pylintrc  Notes.md  README.Setup.md  README.md  noxfile.py  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
Notes/: # Day 2 Afternoon Agenda.md  # Day 2 Morning Agenda.md  # Day 3 Morning Agenda.md  Collections Review.txt  Day 0 - AM.md  Day 1 - AM.md  Day 3 Jeopardy.md  Morning 3 Jeopardy.md  Session1.md  main.py
content/notes/: Day 0 - PM.md  _placeholder.txt
labs/: .env.local.linux  .env.local.windows  .env.remote.pi  README.md  notes.md  requirements.txt
labs/src/: main.py
labs/src/A.0.HelloPython/: README.md
labs/src/A.1.HelloSetup/: README.md
labs/src/E.0.FizzBuzzTexty/: README.md
labs/src/E.1.FizzBuzzBlinky/: README.md
labs/src/G.0.ListGolf/: README.md
labs/src/G.1.DictionaryGolf/: README.md
labs/src/G.3.FunctionGolf/: README.md
labs/src/J.0.EulerProject_002/: README.md
slides/: app.js.map  index.html  serve.py  start.bat  start.py
slides/assets/: generic.jpg~  icon-outline.png~  red-cross-out.png~
slides/www/: app.css  app.js  app.js.map  index.html
src/: main.py
src/E.0.FizzBuzzTexty/: README.md
src/F.0.ListGolf/: README.md
src/G.3.FunctionGolf/: README.md
src/H.0.SchoolReports/: README.md
src/J.0.Fibs/: README.md
src/S.0.CLIWeather/: README.md
src/U.0.DBContext/: README.md
src/U.0.UserDBContext/: README.md
src/a_0_hello_python/: README.md
src/b_0_fizzbuzz/: README.md
src/d_0_list_golf/: README.md
src/f_0_function_golf/: README.md
src/j_0_fibs/: README.md
src/l_0_simple_dice/: README.md
src/l_2_visual_dice/: README.md
src/n_1_RESTful_fortune/: README.md
src/q_0_thermostat/: README.md
src/t_0_color_context/: README.md
(+246 files in other folders)
