[tool.poetry]
name = "python-foundations"
version = "0.1.0"
description = "lorem ipsum"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
Flask = "^2.0.2"
pygal = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.2"}
pytest-cov = "^3.0.0"
poethepoet = "^0.11.0"
black = "^21.12b0"
flake8 = "^4.0.1"
pylint = "^2.12.2"
mypy = "^0.930"
types-requests = "^2.27.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = 'pytest --cov=src'
lint = 'flake8 src'
lint_fix = 'black ./src'
type_check = 'mypy ./src/**/fancy/ --pretty --namespace-packages --explicit-package-bases --ignore-missing-imports'
